--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.3.8",
+    "angular": "^1.3.8",
     "observable-collection": "~0.0.1"
   }
 }
